# aa-bothelpers

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
bothelpers/: __init__.py  app_settings.py  apps.py  models.py  signals.py
bothelpers/cogs/: auth.py  it.py  links.py
lawn_helpers/: app_settings.py  models.py  signals.py
lawn_helpers/cogs/: auth.py  it.py  links.py
testauth/settings/: local.py
