[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "lawn-helpers"
description = "Various helpers for LAWN auth"
readme = "README.md"
keywords = [ "allianceauth" ]
license = { file = "LICENSE" }
authors = [ { name = "Swashman", email = "theswashman88@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "version" ]
dependencies = [
    "allianceauth>=4.3.1,<5",
    "allianceauth-discordbot",
    "allianceauth-securegroups",
]
urls.Changelog = "https://github.com/swashman/lawn-helpers/blob/master/CHANGELOG.md"
urls."Issue / Bug Reports" = "https://github.com/swashman/lawn-ahelpers/issues"

[tool.hatch.version]
path = "lawn_helpers/__init__.py"

[tool.hatch.build]
include = [ "/lawn_helpers" ]

[tool.pylint.'MASTER']
ignore-patterns = [ "__init__.py", "auth_hooks.py", "apps.py", "admin.py" ]
ignore-paths = [ "^.*/tests/.*$", "^.*/migrations/.*$" ]

[tool.pylint.'BASIC']
good-names = [ "i", "j", "k", "ex" ]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "cyclic-import",
    "fixme",
    "import-outside-toplevel",
    "imported-auth-user",
    "too-few-public-methods",
    "no-name-in-module",
    "broad-exception-caught",
    "missing-class-docstring",
]
